# omhacks

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  Makefile.am  README  configure.ac  libomhacks.c  libomhacks.h  om-cmdline.c  om-cmdline.h  om-led.c  om.c  pm-action.c  pm-suspend  qbuild.pro  testhook.c
debian/: changelog  control  copyright  omhacks.install  pm-utils-light.install  pm-utils-light.postrm  pm-utils-light.preinst  rules  vercheck
hooks/: 00-lindi  00at  97-lindi  CMakeLists.txt  at.c  omhacks.c
omhacks/: CMakeLists.txt  all.h  battery.c  battery.h  bt.c  bt.h  gps.c  gps.h  gsm.c  gsm.h  led.c  led.h  libomhacks.pc.in  omhacks.c  omhacks.h  resumereason.c  resumereason.h  screen.c  screen.h  sysfs.c  sysfs.h  uevent.c  uevent.h  usb.c  usb.h  wifi.c  wifi.h
src/: CMakeLists.txt  om-cmdline.c  om-cmdline.h  om-led.c  om.c  om.help2man  pm-action.c
