AC_INIT([omhacks], [0.1], [enrico@enricozini.org], [omhacks])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([foreign subdir-objects nostdinc])

# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AM_PROG_CC_C_O
AM_PROG_LIBTOOL

AC_HEADER_STDC

CFLAGS="-Wall -Werror $CFLAGS"

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
